--- a/SportsStore.WebUI/packages.config
+++ b/SportsStore.WebUI/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
+  <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.0.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.1" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.0.0" targetFramework="net452" />
@@ -15,6 +17,7 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Moq" version="4.5.13" targetFramework="net452" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
   <package id="Ninject.MVC3" version="3.2.1.0" targetFramework="net452" />
