--- a/SportsStore.WebUI/Web.config
+++ b/SportsStore.WebUI/Web.config
@@ -6,8 +6,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--<add name="EFDbContext2" connectionString="Data Source=ZHONGPENG-PC;Initial Catalog=SportsStore;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="EFDbContext2" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=SportsStore;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="EFDbContext2" connectionString="Data Source=ZHONGPENG-PC;Initial Catalog=SportsStore;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="EFDbContext2" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=SportsStore;Integrated Security=True" providerName="System.Data.SqlClient" />-->
 
   </connectionStrings>
   <appSettings>
@@ -15,6 +15,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+  <add key="Email.WriteAsFile" value="true" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
