--- a/SportsStore.WebUI/Web.config
+++ b/SportsStore.WebUI/Web.config
@@ -6,8 +6,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--<add name="EFDbContext2" connectionString="Data Source=ZHONGPENG-PC;Initial Catalog=SportsStore;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="EFDbContext2" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=SportsStore;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="EFDbContext2" connectionString="Data Source=ZHONGPENG-PC;Initial Catalog=SportsStore;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="EFDbContext2" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=SportsStore;Integrated Security=True" providerName="System.Data.SqlClient" />-->
 
   </connectionStrings>
   <appSettings>
@@ -32,6 +32,13 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+        <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" timeout="2880">
+        <credentials passwordFormat="Clear">
+          <user name="azhong" password="yu880102"/>
+        </credentials>
+      </forms>
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
