--- a/SportsStore.WebUI/Web.config
+++ b/SportsStore.WebUI/Web.config
@@ -6,9 +6,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="EFDbContext2" connectionString="Data Source=ZHONGPENG-PC;Initial Catalog=SportsStore;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="EFDbContext2" connectionString="Data Source=ZHONGPENG-PC;Initial Catalog=SportsStore;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="EFDbContext2" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=SportsStore;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-
+    <add name="EFDbContext2" connectionString="Server=tcp:sportsstoresever.database.windows.net,1433;Initial Catalog=mvc5sportsstore_db;Persist Security Info=False;User ID=azhong ;Password=Yu_880102;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
